Ajuste de toda la estructura de security y jwt