@@ -9,27 +9,29 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 
-public class UsuarioPrincipal implements UserDetails{
-    
-    private String name;
-    private String nickname;
+public class UsuarioPrincipal implements UserDetails {
+
+    private String nombre;
+    private String nombreUsuario;
     private String email;
     private String password;
     private Collection<? extends GrantedAuthority> authorities;
 
-    public UsuarioPrincipal(String name, String nickname, String email, String password, Collection<? extends GrantedAuthority> authorities) {
-        this.name = name;
-        this.nickname = nickname;
+    //Constructor
+    public UsuarioPrincipal(String nombre, String nombreUsuario, String email, String password, Collection<? extends GrantedAuthority> authorities) {
+        this.nombre = nombre;
+        this.nombreUsuario = nombreUsuario;
         this.email = email;
         this.password = password;
         this.authorities = authorities;
     }
 
-    public static UsuarioPrincipal build(Usuario usuario){
+    public static UsuarioPrincipal build(Usuario usuario) {
         List<GrantedAuthority> authorities = usuario.getRoles().stream()
-                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors.toList());
-        
-        return new UsuarioPrincipal( usuario.getName(), usuario.getNickname(), usuario.getEmail(), usuario.getPassword(), authorities );
+                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors
+                .toList());
+        return new UsuarioPrincipal(usuario.getNombre(), usuario.getNombreUsuario(), usuario.getEmail(),
+                 usuario.getPassword(), authorities);
     }
 
     @Override
@@ -41,18 +43,18 @@ public class UsuarioPrincipal implements UserDetails{
     public String getPassword() {
         return password;
     }
-    
-    public String getName(){
-        return name;
+
+    public String getNombre() {
+        return nombre;
     }
-    
-    public String getEmail(){
+
+    public String getEmail() {
         return email;
     }
 
     @Override
     public String getUsername() {
-        return nickname;
+        return nombreUsuario;
     }
 
     @Override
@@ -74,7 +76,5 @@ public class UsuarioPrincipal implements UserDetails{
     public boolean isEnabled() {
         return true;
     }
-    
-    
-    
+
 }
